--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,8 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <div id='clickhere'>
+      Please click <a href="./secret">here</a> to visit 'secret'
+    </div>     
   </body>
 </html>
